# MathLib

./: .gitattributes  .gitignore  CMakeLists.txt  build_all_and_run_tests.bat
CompactImpl/: CMakeLists.txt  build.bat
CompactImpl/src/: MultiIndexImpl.cpp  MultiIndexImpl.h
Interface-test/: CMakeLists.txt  build.bat
Interface-test/test/: CompactTest.cpp  SetTest.cpp
SetImpl/: CMakeLists.txt
VectorImpl/: CMakeLists.txt
VectorImpl/src/: VectorImpl.cpp
src/: CompactImpl.cpp  CompactImpl.h  CompactImplControlBlock.cpp  CompactImplControlBlock.h  CompactImplIterator.cpp  MultiIndexImpl.cpp  MultiIndexImpl.h  SetImpl.cpp  SetImpl.h  SetImplControlBlock.cpp  SetImplControlBlock.h  SetImplIterator.cpp  VectorImpl.cpp
test/: CompactTest.cpp  MultiIndexTest.cpp  SetTest.cpp  VectorTest.cpp  tests.hpp
